# pyrex

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: pyrexdata.pkl
example/: FranksTest.ipynb  pyrex_generate_waveform.ipynb  replication copy.ipynb  replication.ipynb  testresult.ipynb  traindata.ipynb
src/pyrex/: __init__.py  basics.py  core.py  main.py  tools.py
tests/: analysis.ipynb  analysis_gw_ecc.ipynb  diagnostic.ipynb  new_test_core.py  replication.ipynb  test_core.py  test_gw_eccentricity.py  test_main.py
