[project]
name = "pyrex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "aminrouanserik@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.14.0",
    "ipykernel>=6.30.1",
    "jsonschema>=4.25.1",
    "lalsuite>=7.26.1",
    "pickleshare>=0.7.5",
    "pycbc>=2.9.0",
    "scipy>=1.16.2",
    "sxs>=2025.0.12",
]

[project.scripts]
pyrex = "pyrex:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
