[project]
name = "pyrex"
version = "0.1.2"
description = "Adding eccentricity to quasi-circular waveforms."
readme = "README.md"
authors = [
    { email = "aminrouanserik@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pickleshare>=0.7.5",
    "pycbc>=2.9.0",
    "qcextender",
    "scipy>=1.16.2",
]

[project.scripts]
pyrex = "pyrex:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
qcextender = { path = "qcextender-0.2.2.tar.gz" }

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
